# AnnotationWebsite

./: .gitignore  01-intro.Rmd  LICENSE  README.md  _output.yml  index.Rmd
Database/: create-database.sql  create-schema.sql  drop-database.sql  drop-schema.sql  (+1 more)
Python/: pyproject.toml
Python/prokaryote/: debug.py  manage.py  runall.bash  runall.fish
Python/prokaryote/annotation/: FASTAparser.py  FASTAregex.py  biopython.py  bioregex.py  devutils.py  exceptions.py  forms.py  models.py  parsing.py  tests.py  urls.py  views.py
Python/prokaryote/annotation/management/commands/: importgenes.py  importgenome.py  importproteins.py
Python/prokaryote/annotation/migrations/: 0001_initial.py
Python/prokaryote/annotation/templates/: BLAST_template.html  basic.html  gene_form.html  gene_query.html  genome_form.html  genome_query.html  protein_form.html  protein_query.html  single_gene_entry.html  single_genome_entry.html  single_protein_entry.html
Python/prokaryote/dbsetup/: apps.py
Python/prokaryote/dbsetup/management/commands/: dbexec.py
Python/prokaryote/home/: models.py  urls.py  views.py
Python/prokaryote/home/migrations/: 0001_initial.py  0002_alter_member_password.py
Python/prokaryote/home/templates/: home.html  mainpage.html  signup.html
Python/prokaryote/prokaryote/: asgi.py  settings.py  urls.py  wsgi.py
Python/prokaryote/static/css/: custom_styles.css
Python/prokaryote/static/js/: sortable.js
Python/prokaryote/templates/: genome_form.html
Python/prokaryote/upload/: forms.py  urls.py  views.py
Python/prokaryote/upload/templates/: upload.html
(+22 files in other folders)
