[tool.poetry]
name = "prokaryote"
version = "0.1.0"
description = ""
authors = [
    "Gustavo Magaña López <28574085+gmagannaDevelop@users.noreply.github.com>",
    "Théo Roncally"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.79"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
psycopg2-binary = "^2.9.2"
selenium = "^4.1.0"
Django = "^3.2.9"
regex = "^2021.11.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.11.1"
mypy = "^0.910"
black = "^21.9b0"
ipython = "^7.28.0"
coverage = "^6.2"
spyder = "^5.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
